added to do list and weather API

--- a/index.html
+++ b/index.html
@@ -28,19 +28,37 @@
       <p class="linkedin">linkedin icon here</p>
     </nav>
     <div class="weather">
+      <h1>Weather Info</h1>
+      <dl>
+        <dt></dt>
+        <dd id="temp"></dd>
+        <div id="icon"></div>
+      </dl>
+      <form>
+        <input type="text" placeholder="City" />
+        <input type="submit" placeholder="Get Weather Info" />
+      </form>
       <span class="weather-icon">image here</span>
       <span class="temperature">temp here</span>
       <span class="location">location here</span>
     </div>
     <div class="clock">
       <h1 class="clock-title">00:00:00</h1>
-      <span class="greetings"></span>
-      <form class="form">
-        <input class="input" type="text" placeholder="What is your name?" />
-      </form>
-      <div class="unsplash">
-        <span class="image-info"></span>
-      </div>
+    </div>
+    <span class="greetings"></span>
+    <form class="form">
+      <input class="input" type="text" placeholder="What is your name?" />
+    </form>
+    <form class="todolist">
+      <input
+        class="todolist-input"
+        type="text"
+        placeholder="Add things to do"
+      />
+      <ul class="todolist-item"></ul>
+    </form>
+    <div class="unsplash">
+      <span class="image-info"></span>
     </div>
   </body>
 </html>
