--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <!-- CSS  -->
     <link rel="stylesheet" href="./css/style.css" />
 
-    <!-- JQuery -->
+    <!-- jQuery -->
     <script
       defer
       src="https://code.jquery.com/jquery-3.4.1.min.js"
@@ -43,17 +43,15 @@
     <div class="clock">
       <h1 class="clock-title">00:00:00</h1>
     </div>
-    <span class="greetings">
+    <div class="greetings">
       <p>Hello, Arthur!</p>
-    </span>
+    </div>
+    <div class="focus">What is your main focus for today?</div>
     <form class="todolist">
-      <input
-        class="todolist-input"
-        type="text"
-        placeholder="Add things to do"
-      />
+      <input class="todolist-input" type="text" />
     </form>
     <ul class="todolist-item"></ul>
+
     <div class="unsplash">
       <div class="image-location"></div>
       <div class="first-last-name"></div>
