Add unsplash div and github navbar link

--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- Google Fonts -->
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
-      rel="stylesheet"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
 
-    <!-- CSS  -->
-    <link rel="stylesheet" href="./css/style.css" />
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet" />
 
-    <!-- jQuery -->
-    <script
-      defer
-      src="https://code.jquery.com/jquery-3.4.1.min.js"
-      integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
-      crossorigin="anonymous"
-    ></script>
+  <!-- CSS  -->
+  <link rel="stylesheet" href="./css/style.css" />
 
-    <!-- JS -->
-    <script defer src="./js/script.js"></script>
+  <!-- jQuery -->
+  <script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 
-    <title>Momentum Clone</title>
-  </head>
-  <body id="unsplash">
+  <!-- JS -->
+  <script defer src="./js/script.js"></script>
+
+  <title>Momentum Clone</title>
+</head>
+
+<body>
+  <div id="unsplash">
     <nav>
       <span class="linkedin">
-        <a href="https://www.linkedin.com/in/arthurryoo/" target="_blank"
-          >LinkedIn</a
-        >
+        <a href="https://www.linkedin.com/in/arthurryoo/" target="_blank">LinkedIn</a>
+        <a href="https://github.com/arthur-ryoo" target="_blank">GitHub</a>
       </span>
     </nav>
     <div class="weather">
@@ -56,5 +51,7 @@
       <div class="image-location"></div>
       <div class="first-last-name"></div>
     </div>
-  </body>
+  </div>
+</body>
+
 </html>
